# Chessops

./: .gitignore  CMakeLists.txt  Doxyfile.in  Jenkinsfile  README.md
include/: chess.h
src/: chess.cpp
tests/: tests.cpp
